<resources>
    <string name="app_name">Traveling</string>
    <string name="title_home">Startseite</string>
    <string name="title_listening">Hören</string>
    <string name="title_reading">Lesen</string>
    <string name="title_speaking">Sprechen</string>
    <string name="title_writing">Schreiben</string>
    <string name="title_quiz">Spielen</string>
    <string name="login">Login</string>
    <string name="menu">Main Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user">Name</string>

    <string name="example">Speech To Text Example</string>
    <string name="btn_tap">Tap to speech</string>
    <string name="result">das Ergebnis sollte diesen Text ersetzen</string>
    <string name="sesuatu">etwas sagen</string>
    <string name="tidaksupport">Die Funktion wird nicht vom Ihrem Gerät nicht unterstϋtzt.</string>
    <string name="storySatu">Thomas reist von den Niederlanden nach Deutschland. Er fährt mit dem Zug. Im Progamm besucht er Berlin. Er macht dort einen Spaziergang durch das Riegierungsviertel. Thomas will das Parlament besictigen, ϋber einen Flohmarkt bummeln. Am Abend will er auch ins Theater gehen</string>
    <string name="storySatuLat"> Thomas (1) von den Niederlanden nach Deutschland. Er fährt mit dem (2). Im Progamm besucht er Berlin. Er macht dort einen Spaziergang durch das Riegierungsviertel. Thomas will das Parlament besictigen, ϋber einen Flohmarkt bummeln. Am Abend will er auch ins Theater (3).</string>
</resources>
