<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_listening"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_listening" />

    <item
        android:id="@+id/navigation_speaking"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_speaking" />

    <item
        android:id="@+id/navigation_writing"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_writing" />

    <item
        android:id="@+id/navigation_reading"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_reading" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_quiz" />

</menu>